--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang = "pt-br">
 	<head>
 		<meta charset = "utf-8">
-		<link rel="stylesheet" type="text/css" href="aula2705.css"/>
+		<link rel="stylesheet" type="text/css" href="Código.css"/>
 	</head>
 	<body>
 		<header>
 			<h1>CEEMTI BAIXO GUANDU</h1>
-			<img src="Logo Escola.png">
+			<img src="logo escola.png">
 			<nav>
 				<a href="#article1">Article</a>
 				<a href="#article2">Article</a>
